--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Fire Mesh</string>
+
+    <string name="nav_item_scan">Scan</string>
+    <string name="nav_item_network">Network</string>
 </resources>
