show group list + network list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,7 +37,7 @@
     <string name="fragment_node_info_cell_description">Model Description</string>
 
     <string name="item_group_group_name">Group Name</string>
-    <string name="item_group_group_key">Group Key</string>
+    <string name="item_group_app_key">App Key</string>
 
     <string name="item_network_network_name">Network Name</string>
     <string name="item_network_network_key">Network Key</string>
